--- a/my.cnf
+++ b/my.cnf
@@ -6,3 +6,5 @@ general_log_file=/dev/stdout
 log_error=/dev/stderr
 collation-server=utf8_unicode_ci
 character-set-server=utf8
+innodb_log_file_size=5242880
+innodb_force_recovery=6
